# planta_rock4

./: .gitignore  .railwayignore  AUDIT_AGENTS_PROMPT.md  AUDIT_FINAL.md  AUDIT_RESULT.md  CLAUDE.md  DATA_MODEL.md  PROJECT_TRUTH.md  README.md  RUNBOOK_LOCAL.md  SENSORES_AUDIT.md  check.sh  check_c.sh  fix_clusters_pos.py  install_v10.py  install_v10b.py  install_v11.py  install_v11b.py  install_v12.py  install_v12b.py  install_v13.py  install_v14.py  install_v15.py  install_v16.py  install_v17.py  install_v18.py  install_v19.py  install_v2.py  install_v20.py  install_v21.py  install_v22.py  install_v23.py  install_v24.py  install_v25.py  install_v26.py  install_v27.py  install_v28.py  install_v29.py  install_v3.py  install_v30.py  (+20 more)
.claude/agents/: arch-auditor.md  audit-unified.md  backend-auditor.md  build-verifier.md  (+24 more)
alembic/: env.py
app/: clusters_capacity.py  clusters_geo.py  config.py  copy_engine.py  db.py  fusion.py  main.py  main.py.bak.cors.20260527_235429  rirstaff_chat.py  sensors_registry.py  sensors_topology.py  startup_seeds.py  test_copy_engine.py  test_flow_canonical.py
docs/: ARCHITECTURE.md  DEPLOY.md  DESIGN.md  OPS.md  PRODUCT.md  SENSORS.md
firmware/: serial_bridge.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
scripts/: check_forbidden_terms.sh
tests/: conftest.py  test_ambiente.py  test_api.py  test_cenarios.py  test_endpoints_complete.py  test_flow.py  test_fusao_rolante.py  test_fusion.py  test_invariants.py  test_live_payload.py  test_operacao.py  test_routing.py  test_scor.py  test_simulation.py
(+261 files in other folders)
