[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plantaos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "websockets>=12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]
